--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,5 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,800");
-@import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
 /*
 	Highlights by HTML5 UP
 	html5up.net | @ajlkn
@@ -117,7 +116,8 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #6f7577;
-		font-family: 'Nanum Gothic';
+		font-family: 'NanumGothic';
+		src: url(NanumFont_TTF_ALL/NanumGothic.ttf) format('truetype');
 		font-size: 15pt;
 		font-weight: 400;
 		line-height: 1.75em;
